# DIP

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: aid.cpp  aid.hpp  argparse.cpp  argparse.hpp  autocrop.cpp  autocrop.hpp  c3d.cpp  c3d.hpp  constants.hpp  glimpses.cpp  glimpses.hpp  logger.cpp  logger.hpp  main.cpp  renderer.cpp  renderer.hpp  saliency.cpp  saliency.hpp  scorespace.cpp  scorespace.hpp  tools.cpp  tools.hpp  trajectory.cpp  trajectory.hpp  videoinfo.cpp  videoinfo.hpp
